@@ -4,12 +4,16 @@ S3method(compare_pairs,cluster_pairs)
 S3method(compare_pairs,pairs)
 S3method(compare_vars,cluster_pairs)
 S3method(compare_vars,pairs)
+S3method(merge_pairs,cluster_pairs)
+S3method(merge_pairs,pairs)
 S3method(predict,problink_em)
 S3method(print,cluster_pairs)
 S3method(print,inspect_pairs)
 S3method(print,pairs)
 S3method(print,problink_em)
 S3method(print,summary_problink_em)
+S3method(rbind,cluster_pairs)
+S3method(rbind,pairs)
 S3method(select_greedy,cluster_pairs)
 S3method(select_greedy,pairs)
 S3method(select_n_to_m,cluster_pairs)
@@ -37,6 +41,7 @@ export(jaro_winkler)
 export(lcs)
 export(link)
 export(match_n_to_m)
+export(merge_pairs)
 export(pair)
 export(pair_blocking)
 export(pair_minsim)
