@@ -2,6 +2,9 @@
 CHANGES IN RECLIN2 0.1.2:
 
   NEW FEATURES:
+  - `merge_pairs` combines two sets of pairs into one (like `rbind`). Expecially 
+    usefull in combination with `pair_blocking` to generate pairs that are blocked
+    on multiple keys (e.g. they have match on either `postcode` or `lastname`).
 
   BUG FIXES:
 
